Update CSS and links in scrumBoard.html and userView.html

--- a/webpages/src/css/userView.css
+++ b/webpages/src/css/userView.css
@@ -4,7 +4,7 @@
     --text: #fff;
     --primary: #403F4C;
     --secondary: #348AA7;
-    --background: #e5dede;
+    --background: #e8e5e5;
     --tertiary: #246b82;
     --quaternary: #cacaca;
     --quinary: #8e8e8e;
