--- a/webpages/src/css/scrumBoard.css
+++ b/webpages/src/css/scrumBoard.css
@@ -17,6 +17,50 @@
     box-sizing: border-box;
 }
 
+input {
+    height: 5vh;
+    width: 75%;
+    background: var(--tertiary);
+    outline: none;
+    color: var(--text);
+    font-size: 15px;
+    border: 0px;
+    border-radius: 0.5em;
+    padding: 2.5%;
+    margin-top: 2.5%;
+}
+
+input:hover {
+    transition: 250ms;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+textarea {
+    height: 30vh;
+    width: 75%;
+    min-width: 75%;
+    max-width: 75%;
+    min-height: 30vh;
+    max-height: 40vh;
+    background: var(--tertiary);
+    outline: none;
+    color: var(--text);
+    font-size: 15px;
+    border: 0px;
+    border-radius: 0.5em;
+    padding: 2.5%;
+    margin-top: 2.5%;
+}
+
+
 html,
 body,
 .content {
