--- a/webpages/src/css/scrumBoard.css
+++ b/webpages/src/css/scrumBoard.css
@@ -15,6 +15,7 @@
     padding: 0;
     outline: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 input {
@@ -454,7 +455,7 @@ footer {
 .onboard-modal {
     height: 300px;
     width: 450px;
-    background-color: #fff;
+    background-color: var(--background);
     border-radius: 3px;
     position: absolute;
     top: 50%;
@@ -556,12 +557,12 @@ footer {
 }
 
 .task {
-    background: white;
-    color: black;
+    background: var(--background);
+    color: var(--text);
+    text-align: center;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
     padding: 12px;
     border-radius: 4px;
-    font-family: sans-serif;
     font-size: 16px;
     cursor: move;
 }
