--- a/webpages/src/css/scrumBoard.css
+++ b/webpages/src/css/scrumBoard.css
@@ -47,10 +47,10 @@ form {
 textarea {
     height: 30vh;
     width: 75%;
-    min-width: 75%;
+    /* min-width: 75%;
     max-width: 75%;
     min-height: 30vh;
-    max-height: 30vh;
+    max-height: 30vh; */
     background: var(--tertiary);
     outline: none;
     color: var(--text);
@@ -59,6 +59,7 @@ textarea {
     border-radius: 0.5em;
     padding: 2.5%;
     margin-top: 2.5%;
+    resize: none;
 }
 
 
