--- a/webpages/src/css/index.css
+++ b/webpages/src/css/index.css
@@ -1,18 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
 * {
   padding: 0;
   margin: 0;
   border: 0;
   font-size: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   z-index: 0;
 }
 
 :root {
   --text: #000000;
-  --primary: #403F4C;
-  --secondary: #348AA7;
+  --primary: #403f4c;
+  --secondary: #348aa7;
   --background: #e8e5e5;
   --tertiary: #f4f4f4;
   --quaternary: #cacaca;
@@ -201,8 +201,8 @@ button:hover,
   margin-left: 20px;
 }
 
-.task-management, 
-.deadline-tracker, 
+.task-management,
+.deadline-tracker,
 .file-sharing {
   text-align: start;
   min-width: 60%;
@@ -230,7 +230,7 @@ button:hover,
 #about {
   width: 100%;
   height: 100vh;
-  background-color: var(--primary);
+  background-color: var(--background);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -246,7 +246,7 @@ button:hover,
 #about a {
   background-color: var(--secondary);
   width: fit-content;
-  padding: 15px 15px;
+  padding: 10px 15px;
   border: 0px;
   border-radius: 30px;
   text-decoration: none;
@@ -256,13 +256,16 @@ button:hover,
 
 .about-image {
   flex-basis: 100%;
-  height: 100%;
+  padding: 1em;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 .about-image img {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
+  border-radius: 20px;
 }
 
 .about-text {
@@ -280,17 +283,15 @@ button:hover,
   font-size: 2.5em;
   font-weight: 700;
   margin-bottom: 1rem;
-  color: var(--secondary);
+  color: var(--text);
   text-transform: uppercase;
   letter-spacing: 2px;
-  background-color: var(--primary);
 }
 
 .about-text p {
   margin-bottom: 2rem;
   line-height: 1.6;
-  background-color: var(--primary);
-  color: var(--background);
+  color: var(--text);
 }
 
 /* CONTACT CSS */
@@ -332,7 +333,7 @@ button:hover,
   margin-top: 2%;
   height: 30vh;
   max-height: 50vh;
-  font-size: 25px;
+  font-size: 20px;
   padding: 8px 0px;
   border: 1px solid var(--text);
   border-radius: 30px;
@@ -344,7 +345,7 @@ button:hover,
 
 #name-input,
 #email-input {
-  font-size: 25px;
+  font-size: 20px;
   padding: 8px 12px;
   border: 1px solid var(--text);
   border-radius: 30px;
@@ -357,9 +358,9 @@ button:hover,
 
 #submit-button {
   margin-top: 2.5vh;
-  background-color: var(--primary);
+  background-color: var(--secondary);
   color: var(--background);
-  font-size: 25px;
+  font-size: 20px;
   border-radius: 60px;
   width: auto;
   padding: 8px 12px;
@@ -367,17 +368,28 @@ button:hover,
 
 #footer {
   width: 100%;
-  height: 7.5vh;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
   background-color: var(--primary);
+  color: var(--tertiary);
+  padding: 20px;
+  text-align: center;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
 }
 
 .social-icon {
-  background-color: var(--primary);
+  margin: 0 20px;
 }
 
-.social-icon:hover {
-  cursor: pointer;
+#footer a {
+  padding: 10px 20px;
+  color: var(--tertiary);
+  text-decoration: none;
+}
+
+#footer p {
+  font-size: 14px;
+  margin-top: 20px;
 }
