Minor updates for userView and index pages

--- a/webpages/src/css/userView.css
+++ b/webpages/src/css/userView.css
@@ -19,42 +19,23 @@ html {
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: var(--background);
+  background-color: var(--primary);
 }
 
-/* Wrapper for the entire layout */
 .wrapper {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .top-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 30px;
   background-color: var(--secondary);
   color: var(--background);
-  border-bottom: 5px solid var(--tertiary); /* Darker border color */
-}
-
-.logo {
-  font-size: 24px;
-}
-
-.menu-items {
-  display: flex;
-  align-items: center;
-}
-
-.menu-items a {
-  color: var(--text);
-  text-decoration: none;
-  margin-left: 20px; /* Add margin between menu items */
-  padding-top: 5px;
-  border-radius: 5px;
-  transition: background-color 0.3s;
+  border-bottom: 5px solid var(--tertiary);
 }
 
 .dashboard {
@@ -65,26 +46,16 @@ html {
 .sidebar {
   width: 200px;
   background-color: var(--primary);
-  color: var(--text);
   padding: 20px;
 }
 
 .sidebar-buttons {
   margin-bottom: 20px;
   padding: 10px;
-  border-radius: 5px;
-  background-color: var(--quinary);
+  border-radius: 10px;
+  color: var(--text);
+  background-color: var(--secondary);
   transition: background-color 0.3s;
-}
-
-.sidebar a {
-  display: inline-block;
-  /* padding: 20px; */
-  /* margin: 0px; */
-  width: 90%;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
 }
 
 .sidebar-buttons:hover {
@@ -93,29 +64,150 @@ html {
 }
 
 .main-content {
-  flex-grow: 1;
   padding: 20px;
-}
-
-.add-note {
-  background-color: #28a745;
-  color: #ffffff;
   border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.add-note:hover {
-  background-color: #218838;
+  flex-grow: 1;
+  background-color: transparent;
 }
 
 img {
-  height: 40px;
-  width: 40px;
+  margin-left: 30px;
+  height: 50px;
+  width: 50px;
 }
 
 a:visited {
   color: var(--text);
+}
+
+.content-frame {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap");
+
+.navbar {
+  display: flex;
+  align-items: center;
+  height: 70px;
+  background-color: var(--background);
+  padding: 0 8%;
+  box-shadow: var(--shadow);
+}
+
+.navbar-logo {
+  cursor: pointer;
+  margin-right: auto;
+}
+
+.navbar-list {
+  width: 100%;
+  text-align: right;
+  padding-right: 2rem;
+}
+
+.navbar-list li {
+  display: inline-block;
+  margin: 0 1rem;
+}
+
+.navbar-list li a {
+  font-size: 1rem;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.profile-dropdown {
+  position: relative;
+  width: fit-content;
+}
+
+.profile-dropdown-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 1rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  width: 150px;
+  border-radius: 50px;
+  color: var(--background);
+  cursor: pointer;
+  border: 1px solid var(--secondary);
+  transition: box-shadow 0.2s ease-in, background-color 0.2s ease-in,
+    border 0.3s;
+}
+
+.profile-img {
+  position: relative;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 100%;
+  background: url(/webpages/src/contents/imgs/about-us.png);
+  background-size: cover;
+}
+
+.profile-img i {
+  position: absolute;
+  right: 0;
+  bottom: 0.3rem;
+  font-size: 0.1rem;
+  color: var(--green);
+}
+
+.profile-dropdown-btn span {
+  margin: 0 0.5rem;
+  margin-right: 0;
+}
+
+.profile-dropdown-list {
+  position: absolute;
+  top: 50px;
+  width: 200px; /* width*/
+  right: 0;
+  background-color: var(--secondary);
+  border-radius: 30px;
+  max-height: 0;
+  overflow: hidden;
+  box-shadow: var(--shadow);
+  transition: max-height 0.5s;
+}
+
+.profile-dropdown-list.active {
+  max-height: 400px;
+}
+
+.profile-dropdown-list-item {
+  padding: 0.3rem 0.5rem;
+  text-align: left;
+  transition: background-color 0.9s ease-in, padding-left 0.4s;
+}
+
+.profile-dropdown-list-item a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 500;
+  color: var(--black);
+}
+
+.profile-dropdown-list-item a i {
+  margin-right: 0.8rem;
+  font-size: 1.1rem;
+  height: 2.3rem;
+  background-color: var(--secondary);
+  color: var(--white);
+  line-height: 2.3rem;
+  text-align: center;
+  margin-right: 1rem;
+  border-radius: 50%;
+  transition: margin-right 0.4s;
+}
+
+.profile-dropdown-list-item:hover {
+  padding-left: 1.5rem;
+  background-color: var(--secondary-light);
 }
