--- a/webpages/src/css/index.css
+++ b/webpages/src/css/index.css
@@ -11,7 +11,7 @@
 
 :root {
   --text: #000000;
-  --primary: #403f4c;
+  --primary: #1e1c1c;
   --secondary: #348aa7;
   --background: #e8e5e5;
   --tertiary: #f4f4f4;
@@ -87,10 +87,10 @@ button:hover,
 #logo-container {
   width: 7.5vh;
   height: 7.5vh;
-  background-color: var(--text);
-  color: var(--background);
   position: absolute;
   left: 5%;
+  background-image: url(../contents/imgs/logo.png);
+  background-size: cover; 
 }
 
 #header-wrapper {
@@ -230,7 +230,7 @@ button:hover,
 #about {
   width: 100%;
   height: 100vh;
-  background-color: var(--background);
+  background-color: var(--primary);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -252,19 +252,19 @@ button:hover,
   border-radius: 30px;
   text-decoration: none;
   font-size: 1.2rem;
-  color: var(--background);
+  color: var(--tertiary);
 }
 
 .about-image {
   flex-basis: 100%;
-  padding: 1em;
+  padding: 2em;
   border-radius: 20px;
   overflow: hidden;
 }
 
 .about-image img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   border-radius: 20px;
 }
@@ -272,7 +272,6 @@ button:hover,
 .about-text {
   flex-basis: 50%;
   padding: 6rem;
-  color: var(--background);
   background-color: transparent;
   display: flex;
   flex-direction: column;
@@ -284,7 +283,7 @@ button:hover,
   font-size: 2.5em;
   font-weight: 700;
   margin-bottom: 1rem;
-  color: var(--text);
+  color: var(--tertiary);
   text-transform: uppercase;
   letter-spacing: 2px;
 }
@@ -292,7 +291,7 @@ button:hover,
 .about-text p {
   margin-bottom: 2rem;
   line-height: 1.6;
-  color: var(--text);
+  color: var(--tertiary);
 }
 
 /* CONTACT CSS */
@@ -382,6 +381,11 @@ button:hover,
 
 .social-icon {
   margin: 0 20px;
+}
+
+.social-icon img {
+  width: 30px;
+  height: 30px;
 }
 
 #footer a {
