--- a/webpages/src/css/scrumBoard.css
+++ b/webpages/src/css/scrumBoard.css
@@ -566,7 +566,7 @@ footer {
     padding: 12px;
     border-radius: 4px;
     font-size: 16px;
-    cursor: move;
+    cursor: grab;
 }
 
 .is-dragging {
@@ -574,4 +574,5 @@ footer {
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
     background: rgb(50, 50, 50);
     color: white;
+    cursor: grabbing;
 }
