--- a/webpages/src/css/scrumBoard.css
+++ b/webpages/src/css/scrumBoard.css
@@ -19,6 +19,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+*::-webkit-scrollbar {
+    display: none;
+}
+
 input {
     height: 5vh;
     width: 75%;
@@ -556,6 +560,7 @@ footer {
     gap: 12px;
     margin-top: 5px;
     padding: 12px;
+    overflow: scroll;
 }
 
 .task {
